# danger-flake8

./: .gitignore  README.md  dangerfile.py  pyproject.toml  setup.cfg
danger_flake8/: __init__.py  plugin.py  violation.py
tests/: test_plugin.py  test_violation.py
tests/fixtures/: flake8_output
