[tool.poetry]
name = "danger-flake8"
version = "0.1.0"
description = "Danger plugin to display flake8 lint result"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"
flake8 = "^3.7.9"
pytest-watch = "^4.2.0"
pytest-cov = "^2.8.1"
black = "^19.10b0"
isort = "^4.3.21"
mypy = "^0.761"
danger-python = {git = "https://github.com/danger/python.git", rev = "master"}
testfixtures = "^6.12.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
